--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
     <header class="header active">
         <div>
             <nav class="navbar">
+                <a href="#projects">Projects</a>
                 <a href="#aboutme">About Me</a>
-                <a href="#projects">About Me</a>
-                <a href="#contact">About Me</a>
+                <a href="#contact">Contacto</a>
             </nav>
         </div>
     </header>
     <main>
-        <article>
-            <div class="container">
-                <section class="aboutme" id="aboutme">
+                <section class="mainView" id="mainView">
                     <div class="container">
+                        <p>JAVA DEVELOPER</p>
 
                     </div>
                 </section>
                 <section class="projects" id="projects">
-                    <div class="container">
+                    <div class="container">PROYECTOS
 
                     </div>
                 </section>
+                <section class="aboutme" id="aboutme">
+                    <div class="container">SOBRE MI
+                </section>
+
                 <section class="contact" id="contact">
-                    <div class="container">
-                        
-                    </div>
+                    <div class="container">CONTACTO
                 </section>
             </div>
-        </article>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
